@startuml

title __CHAT's Class Diagram__\n

  namespace ru.gb.jtwo.lfive.online {
    namespace chat {
      class ru.gb.jtwo.lfive.online.chat.ChatServer {
          + start()
          + stop()
      }
    }
  }
  

  namespace ru.gb.jtwo.lfive.online {
    namespace chat {
      class ru.gb.jtwo.lfive.online.chat.ClientGUI {
          {static} - HEIGHT : int
          {static} - WIDTH : int
          - btnDisconnect : JButton
          - btnLogin : JButton
          - btnSend : JButton
          - cbAlwaysOnTop : JCheckBox
          - log : JTextArea
          - panelBottom : JPanel
          - panelTop : JPanel
          - shownIoErrors : boolean
          - tfIPAddress : JTextField
          - tfLogin : JTextField
          - tfMessage : JTextField
          - tfPassword : JPasswordField
          - tfPort : JTextField
          - userList : JList<String>
          + actionPerformed()
          {static} + main()
          + uncaughtException()
          - ClientGUI()
          - putLog()
          - sendMessage()
          - showException()
          - wrtMsgToLogFile()
      }
    }
  }
  

  namespace ru.gb.jtwo.lfive.online {
    namespace chat {
      class ru.gb.jtwo.lfive.online.chat.ServerGUI {
          {static} - HEIGHT : int
          {static} - POS_X : int
          {static} - POS_Y : int
          {static} - WIDTH : int
          - btnStart : JButton
          - btnStop : JButton
          + actionPerformed()
          {static} + main()
          + uncaughtException()
          - ServerGUI()
      }
    }
  }
  

  ru.gb.jtwo.lfive.online.chat.ChatServer o-- ru.gb.jtwo.lfive.online.chat.network.ServerSocketThread : server
  ru.gb.jtwo.lfive.online.chat.ClientGUI .up.|> java.awt.event.ActionListener
  ru.gb.jtwo.lfive.online.chat.ClientGUI .up.|> java.lang.Thread.UncaughtExceptionHandler
  ru.gb.jtwo.lfive.online.chat.ClientGUI -up-|> javax.swing.JFrame
  ru.gb.jtwo.lfive.online.chat.ServerGUI .up.|> java.awt.event.ActionListener
  ru.gb.jtwo.lfive.online.chat.ServerGUI .up.|> java.lang.Thread.UncaughtExceptionHandler
  ru.gb.jtwo.lfive.online.chat.ServerGUI -up-|> javax.swing.JFrame
  ru.gb.jtwo.lfive.online.chat.ServerGUI o-- ru.gb.jtwo.lfive.online.chat.ChatServer : chatServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
